versioned_docs/version-2023.2.1/professor/kleber_augusto_michalichem.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
export const data = {
  title: "Kleber Augusto Michalichem",
  base: "",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: []
    },
    {
      dayName: "Terça-Feira",
      dayClasses: []
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Educação Física I",
          size: 2,
          teachers: [
            "Kleber Augusto Michalichem"
          ],
          classroom: "Sala 8",
          students: [
            "IIW2023B"
          ],
          time: "10:15 - 11:05"
        },
        {
          subject: "Educação Física II",
          size: 2,
          teachers: [
            "Kleber Augusto Michalichem"
          ],
          classroom: "Sala 6",
          students: [
            "IIW2022B"
          ],
          time: "07:30 - 08:20"
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: []
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [
        {
          subject: "Educação Física I",
          size: 2,
          teachers: [
            "Kleber Augusto Michalichem"
          ],
          classroom: "Sala 8",
          students: [
            "IIW2023B"
          ],
          time: "10:15 - 11:05"
        },
        {
          subject: "Educação Física II",
          size: 2,
          teachers: [
            "Kleber Augusto Michalichem"
          ],
          classroom: "Sala 6",
          students: [
            "IIW2022B"
          ],
          time: "07:30 - 08:20"
        }
      ]
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 17:35",
      size: 50
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Kleber Augusto Michalichem

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
